--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
-    "morgan": "^1.10.0"
+    "gun": "^0.2020.1240",
+    "morgan": "^1.10.0",
+    "node-forge": "^1.3.1"
   }
 }
