--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "gun": "^0.2020.1240",
     "morgan": "^1.10.0",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "nodemon": "^3.1.9"
   }
 }
