--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "the-project",
+  "name": "dchat-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.21.2",
-    "gun": "^0.2020.1240",
     "morgan": "^1.10.0",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.4.2",
+    "typescript": "^5.1.6"
   }
 }
