--- a/package.json
+++ b/package.json
@@ -4,23 +4,36 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "nodemon dist/index.js",
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-forge": "^1.3.1",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.1.9",
+    "prisma": "^6.4.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
+    "@types/connect": "^3.4.38",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.4.2",
+    "@types/universal-cookie": "^2.2.0",
     "typescript": "^5.1.6"
   }
 }
