--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --watch",
     "start": "nodemon dist/index.js",
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/handlebars": "^4.0.40",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-forge": "^1.3.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
@@ -33,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.4.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/universal-cookie": "^2.2.0",
     "typescript": "^5.1.6"
   }
