refactor: organize imports, update type definitions, and enhance email sending logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "@dao/*": ["src/dao/*"],
       "@routes/*": ["src/routes/*"],
       "@prisma/*": ["src/prisma/*"],
-      "@utils/*": ["src/utils/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
