--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc --watch",
     "start": "nodemon dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "fix": "biome check . --fix --unsafe  && biome format ."
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
@@ -26,9 +27,11 @@
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "universal-cookie": "^7.2.2"
+    "universal-cookie": "^7.2.2",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/connect": "^3.4.38",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -37,7 +40,6 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.4.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/universal-cookie": "^2.2.0",
-    "typescript": "^5.1.6"
+    "@types/universal-cookie": "^2.2.0"
   }
 }
