style: standardize quote style to single quotes across the codebase

--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,13 @@
       "dist/"
     ]
   },
+  "javascript": {
+    "formatter": {
+      "enabled": true,
+      "indentStyle": "space",
+      "quoteStyle": "single"
+    }
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
