--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc --watch",
+    "build": "tsc && cp -r ./src/types dist/",
     "start": "nodemon dist/index.js",
     "dev": "ts-node src/index.ts",
-    "fix": "biome check . --fix --unsafe  && biome format ."
+    "test": "jest",
+    "biome:check": "biome check .",
+    "fix": "biome check . --fix --unsafe  && biome format .",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/handlebars": "^4.0.40",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -19,18 +20,23 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "handlebars": "^4.7.8",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "universal-cookie": "^7.2.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "universal-cookie": "^7.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/handlebars": "^4.0.40",
+    "@types/jest": "^29.5.14",
     "@biomejs/biome": "^1.9.4",
     "@types/connect": "^3.4.38",
     "@types/cookie-parser": "^1.4.8",
